# ConfigWizard

./: .gitignore  CMakeLists.txt
QuickFlux/: plugin.qmltypes
doc/: 潜伏顶升式AMR组态设计向导需求规格说明书（20230707）.docx  设计输出文件.7z
doc/设计输出文件/: 缺少内容.txt
doc/设计输出文件/标注/: index.html
include/kcnetlib/: kecnetlib.chm  version.txt
include/kcnetlib/core/: kc_buffer.h  kc_dll_export.h  kc_event.h  kc_ip.h  kc_string_handle.h  kc_thread.h  kc_thread_locker.h  kc_time.h
include/kcnetlib/dds/: dds_monitor.h  dds_node.h  dds_server.h  rpc_node.h
include/kcnetlib/file/: kc_file_handle.h  kc_log.h  kc_memory_file.h  kc_xml.h  kc_zip.h
include/kcnetlib/http/: kc_http_client.h  kc_http_client_async.h  kc_http_server.h
include/kcnetlib/redis/: kc_redis_client.h
include/kcnetlib/serialization/: kc_archive.h  kc_object.h  kc_object_template.h  kc_stream.h
include/kcnetlib/ssh/: kc_ssh.h
include/kcnetlib/tcp/: kc_tcp_client.h  kc_tcp_server.h
include/quickflux/: quickflux.h
lib/: kcnet_file.lib  kcnet_file_d.lib  quickflux.lib
src/: QtFloatValidator.cpp  QtFloatValidator.h  configuration_wizard.cpp  configuration_wizard.h  configuration_wizard.qrc  main.cpp  model.xml  test_data.json  xml_parser.cpp  xml_parser.h  xml_wraper.cpp  xml_wraper.h
src/qml/: ChassisPage.qml  ChassisStructure.qml  ContentArea.qml  DriverConfig.qml  DynComponent.qml  DynComponentA.qml  DynmicPage.qml  HCInteractionPage.qml  InstallDirection.qml  LocationPage.qml  Searchbar.qml  StyledText.qml  TitleLine.qml  VehiclePage.qml  Wizard.qml  dynamic_create.js  main.qml
test/: main.cpp
(+65 files in other folders)
